<resources>
    <string name="app_name">Pharmacy</string>
    <string name="login_signup_hint">signup</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
</resources>
