<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="22sp"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:textColor="#037154"
            android:textStyle="bold"
            android:gravity="center_horizontal">

        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputPassword"
            android:layout_marginTop="20dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailET"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/login_email_hint"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputEmail"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pwdET"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="1"
                android:hint="@string/login_password_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

       <!-- <TextView
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:onClick="viewForgotPAssword"
            android:layout_marginTop="10dp"/>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LoginBtn"
            android:text="@string/login"
            android:fontFamily="@font/poppins_bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/whiteTextColor"
            android:textStyle="bold"
            android:background="@drawable/buttongrd"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#037154"
            android:textSize="22sp"
            android:text="@string/login_signup_hint"
            android:fontFamily="@font/poppins_bold"
            android:onClick="viewRegisterClicked"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>