<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        android:id="@+id/mainLayt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#037154"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/register"
            android:layout_marginTop="20dp"/>

        <!--  <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp">
              <EditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text"
                  android:backgroundTint="@color/primaryTextColor"
                  android:textSize="12sp"
                  android:maxLines="1"
                  android:hint="Name"/>
          </com.google.android.material.textfield.TextInputLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="#070707"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:background="@drawable/btn_rounded">
               <!-- <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="center|start"
                    android:padding="5dp"
                    android:background="@android:color/transparent"/>-->

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:textColor="#000"
                    android:padding="5dp"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mobile_number"
                android:gravity="center|start"
                android:textColor="#070707"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/btn_rounded"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/PhnoET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:textColor="#000"
                    android:padding="5dp"
                    android:inputType="phone"
                    android:background="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/email"
                android:textColor="#070707"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/btn_rounded"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:textColor="#000"
                    android:padding="5dp"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:gravity="center|start"
                android:textColor="#070707"
                android:textSize="18sp"
                android:layout_gravity="center"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                app:passwordToggleEnabled="true"
                android:background="@drawable/btn_rounded">

                <EditText
                    android:id="@+id/pwdEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:textColor="#000"
                    android:padding="5dp"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Register"
            android:textColor="@color/whiteTextColor"
            android:textStyle="bold"
            android:background="@drawable/buttongrd"
            android:layout_marginTop="40dp"/>

        <!-- <TextView
             android:id="@+id/loginTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textStyle="bold"
             android:textColor="@color/primaryTextColor"
             android:text="Login"
             android:layout_marginTop="40dp"
             android:textSize="22sp"/>-->

    </LinearLayout>

</androidx.cardview.widget.CardView>